fixing wrap

--- a/my-practice/src/App.css
+++ b/my-practice/src/App.css
@@ -29,48 +29,106 @@
   color: #61dafb;
 }
 
+.Page-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100vw;
+  margin: 0 auto;
+}
+
+/* start here */
+
 .Namecard-generator {
   display: flex;
+  gap: 20px
 }
 
 .Input-form {
   background-color: #fffaf4;
   border: 1px solid #ffe5dc;
-  margin: 2%;
+  margin: 2% 0 2% 0;
   border-radius: 25px;
   box-shadow: 0 12px 30px rgba(255, 111, 97, 0.15); /* SHADOW */
-  width: 50vw;
+  min-width: 35vw;
   padding: 5%;
   display: flex;  
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+
 }
 
 .Input-field {
   display: flex;
-  gap: 10px;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   font-size: 14px;
+  margin-bottom: 1rem;
 }
+
+.Input-field p {
+  white-space: nowrap;
+}
+
 
 .Namecard-preview {
   background-color: #ffeadd;
   border-radius: 25px;
   border: 1px solid #ffd6cc;
   color:#333;
-  width: 50vw;
+  min-width: 35vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   padding: 5%;
-  margin: 2%
+  margin: 2% 0 2% 0;
+
 }
 
 .Namecard-preview * {
   margin: 4px;
   padding: 0;
+}
+
+/* stop here for now */
+
+.Saved-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; /* or center, depending on your layout */
+  margin-top: 2px;
+  gap: 20px; /* add this and it wraps again */
+  padding: 0 20px 0 20px
+} 
+
+.Saved-cards * {
+  margin: 4px;
+  padding: 0;
+}
+
+.Saved-card {
+  background-color: #ffeadd;
+  border-radius: 25px;
+  border: 1px solid #ffd6cc;
+  color:#333;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 5%;
+  margin: 25px 0 0 0;
+  min-width: 35vw;
+
+}
+
+.Input-form,
+.Namecard-preview,
+.Saved-card {
+  width: calc(50% - 10px);
+  box-sizing: border-box;
 }
 
 .Profile-pic {
